[package]
name = "narwhal-tooth"
version = "1.0.0"
edition = "2021"
description = "The Tooth of a Narwhal"
license = "MIT"

[dependencies]
btleplug = { version = "0.9.2", features = ["serde"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.21"
uuid = { version = "1.6.1", features = ["v4"] }
